css/parser/tests/errors/rome/invalid/selector2/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/rome/invalid/selector2/input.css:1:8
  |
1 | span ~ + {}
  |        ^

